--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -9,5 +9,5 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
   background-color: #fff;
   height: auto;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
