--- a/src/templates/blogPost.css
+++ b/src/templates/blogPost.css
@@ -4,15 +4,16 @@
 }
 
 .blog-post .mainImage {
+  max-width: 800px;
   display: block;
   margin: 0 auto;
-  max-width: 900px;
+  width: 100%;
   padding-top: 48px;
 }
 
 .blog-post .title {
-  max-width: 900px;
-  font-size: 36px;
+  max-width: 800px;
+  font-size: 32px;
   line-height: 1.125;
   letter-spacing: 0.03rem;
   font-weight: 700;
@@ -24,7 +25,8 @@
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  width: 900px;
+  width: 100%;
+  max-width: 800px;
 }
 
 .blog-post .date {
@@ -35,7 +37,6 @@
 .blog-post .date {
   display: block;
   line-height: 1.2;
-  text-align: center;
   font-size: 16px;
   font-weight: 400;
   color: #808080;
@@ -44,8 +45,16 @@
   margin-bottom: 12px;
 }
 
+.blog-post .author{
+  text-align: right;
+}
+
+.blog-post .date{
+  text-align: left;
+}
+
 .blog-post .content {
-  padding: 48px 0;
+  padding: 24px 0;
 }
 
 .blog-post p {
@@ -61,6 +70,35 @@
 
 .blog-post img:not(.mainImage) {
   display: block;
+  width: 80%;
   max-width: 600px;
   margin: 36px auto;
+}
+
+@media (max-width: 768px) {
+  .blog-post .mainImage {
+    padding-top: 12px;
+  }
+
+  .blog-post .title {
+    font-size: 24px;
+    margin: 0 auto 0 auto;
+  }
+  
+  .blog-post .author,
+  .blog-post .date {
+    font-size: 12px;
+  }
+  
+  .blog-post .content {
+    padding: 18px 0;
+  }
+  
+  .blog-post p {
+    font-size: 16px;
+  }
+  
+  .blog-post img:not(.mainImage) {
+    margin: 18px auto;
+  }
 }
